# vzcpuidctl

./: .gitignore  CMakeLists.txt  README.md
src/: base64.c  cpu.c  cpuid.c  cpuidctl.c  fpu.c  json.c  log.c  main.c  vzcpuidctl.c
src/include/: base64.h  bitops.h  bug.h  compiler.h  cpu.h  cpuid.h  cpuidctl.h  err.h  fpu.h  json.h  list.h  log.h  vzcpuidctl.h  x86-cpuid.h  xmalloc.h
